unpackaged/main/default/objects/OpportunitySplit/fields/Opportunity_Split_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Split_Type_Id__c</fullName>
    <formula>CaseSafeId( SplitTypeId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Split Type Id</label>
    <type>Text</type>
</CustomField>