unpackaged/main/default/objects/OpportunitySplit/fields/Split_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Split_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split 18-Digit ID</label>
    <type>Text</type>
</CustomField>