unpackaged/main/default/objects/OpportunitySplit/fields/User_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>User_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(SplitOwnerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User 18-Digit ID</label>
    <type>Text</type>
</CustomField>