unpackaged/main/default/objects/OpportunitySplit/validationRules/OppSplitsCannotBeGreaterThan100.validationRule-meta.xml
<ValidationRule>
    <fullName>OppSplitsCannotBeGreaterThan100</fullName>
    <active>true</active>
    <description>The Opportunity Splits cannot be greater thank 100%</description>
    <errorConditionFormula>AND(
   NOT( $Permission.ByPass_OppSplitsCannotBeGreaterThan100),
SplitPercentage &gt; 1.0
)</errorConditionFormula>
    <errorMessage>The Opportunity Splits cannot be greater than 100%</errorMessage>
</ValidationRule>